--- a/whetherApp-1/pom.xml
+++ b/whetherApp-1/pom.xml
@@ -5,19 +5,18 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.3</version>
+		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>whetherApp</artifactId>
+	<artifactId>whetherApp-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>whetherApp</name>
-	<description>getClimate</description>
+	<name>whetherApp-1</name>
+	<description>getClimatedetail</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -29,7 +28,6 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
